--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,6 @@
 	path = bundle/vim-instant-markdown
 	url = https://github.com/suan/vim-instant-markdown
 	branch = master
+[submodule "bundle/vim-gitgutter"]
+	path = bundle/vim-gitgutter
+	url = git://github.com/airblade/vim-gitgutter.git
